<resources>
    <string name="app_name">Carko</string>

    <!-- Main activity -->
    <string name="title_activity_main">Carko</string>
    <string name="login_button">Log in</string>
    <string name="register_button">Register</string>
    <string name="tab1_text">Fun. Sex. Lots\'a money.</string>

    <!-- Login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_most_viewed">MostViewedActivity</string>

    <!-- Action bar -->
    <string name="action_settings">Settings</string>
    <!-- TODO: Replace this + string with a bigger + icon -->
    <string name="action_add_parking">+</string>

    <!-- Parking list -->
    <string name="dummy_parking_address">3235 avenue de la malbaie</string>
    <string name="parking_availability_tag">Availability:</string>
    <string name="dummy_parking_availability_time">days</string>

    <!-- Parking detail -->
    <string name="address_label">Address</string>
    <string name="description_label">Description</string>
    <string name="availability_label">Availability</string>
    <string name="rates_label">Rates</string>
    <string name="profit_label">Profit</string>

    <!-- Marker info -->
    <string name="marker_info_tap">Tap to continue…</string>
    <string name="title_activity_parking_detail">ParkingDetailActivity</string>

    <!-- Geocoding Activity -->
    <string name="geocoding_hint">Search location</string>
    <string name="locate_parking">Locate your parking</string>

</resources>
