<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_parking_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.carko.carko.ParkingDetailActivity"
    tools:showIn="@layout/activity_parking_detail">

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/pacmanjaune"
        android:id="@+id/imageButton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_label" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_parking_address"
            android:id="@+id/parkingAddress"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:maxLines="1"
            android:ellipsize="end"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_parking_address"
            android:id="@+id/parkingAddressSmall"/>

        <View style="@style/Divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_label" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Placeholder"
            android:id="@+id/parkingDescription"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Placeholder"
            android:id="@+id/parkingDescriptionSmall"/>

        <View style="@style/Divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/availability_label" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0:00 AM - 12:00 PM"
            android:id="@+id/parkingAvailability"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View style="@style/Divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rates_label" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$1.00"
            android:id="@+id/parkingRates"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View style="@style/Divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profit_label" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="0.00$"/>

    </LinearLayout>


</LinearLayout>
