<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9F9F9"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listItemParkingImage"
        android:src="@drawable/ghost"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dummy_parking_address"
        android:id="@+id/listItemParkingAddress"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/listItemParkingImage"
        android:layout_toRightOf="@+id/listItemParkingImage"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginBottom="2dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parking_availability_tag"
        android:id="@+id/listItemParkingAvailabilityTag"
        android:layout_below="@+id/listItemParkingAddress"
        android:layout_toRightOf="@+id/listItemParkingImage"
        android:layout_toEndOf="@+id/listItemParkingImage"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_parking_availability_time"
        android:id="@+id/listItemParkingAvailabilityTime"
        android:layout_alignBaseline="@+id/listItemParkingAvailabilityTag"
        android:layout_toRightOf="@+id/listItemParkingAvailabilityTag"
        android:layout_toEndOf="@+id/listItemParkingAvailabilityTag"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>

</RelativeLayout>

